--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         </div>
 
         <div class="result">
+        <div class="container">
             <h1>Result:</h1>
             <div id="hasil">
 
             </div>
-         
+        </div>
         </div>
 
 
